--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -10,6 +10,7 @@
   ],
   "namespace": "",
   "sourceApiVersion": "54.0",
+  "oauthLocalPort": 1818,
   "packageAliases": {
     "vf2lwc": "0Ho3h000000CaiBCAS",
     "vf2lwc@53.0.0-3": "04t3h000004jt5sAAA",
